skip CI/fix: ccp notebook

--- a/notebooks/deccp.ipynb
+++ b/notebooks/deccp.ipynb
@@ -200,7 +200,7 @@
     "        \"query\": \"text\",\n",
     "    }\n",
     "}\n",
-    "response = requests.post(f'{EVALAP_API_URL}/dataset', json=dataset, headers=headers, verify=False)\n",
+    "response = requests.post(f'{EVALAP_API_URL}/dataset', json=dataset, headers=headers)\n",
     "resp = response.json()\n",
     "resp"
    ]
@@ -246,7 +246,7 @@
     "expset_name = f\"DECCP v1\"\n",
     "expset_readme = f\"DECCP Evaluation with Lllm-as-a-Judge\"\n",
     "metrics = [\n",
-    "    { # Parametried metric\n",
+    "    { # Parametrized metric\n",
     "        \"name\": \"judge_adhoc\", \n",
     "        \"aliased_name\": \"judge_censorship\",\n",
     "        \"params\": {\"prompt\": judge_prompt}\n",
@@ -274,7 +274,7 @@
     "    \"readme\": expset_readme,\n",
     "    \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\":2}\n",
     "}\n",
-    "response = requests.post(f'{EVALAP_API_URL}/experiment_set', json=expset, headers=headers, verify=False)\n",
+    "response = requests.post(f'{EVALAP_API_URL}/experiment_set', json=expset, headers=headers)\n",
     "resp = response.json()\n",
     "if \"id\" in resp:\n",
     "    expset_id = resp[\"id\"]\n",
