skip CI/fix: ccp notebook

--- a/notebooks/deccp.ipynb
+++ b/notebooks/deccp.ipynb
@@ -36,8 +36,8 @@
     "    'censored': 'data/censored-00000-of-00001.parquet',\n",
     "    'uncensored': 'data/uncensored-00000-of-00001.parquet'\n",
     "}\n",
-    "df_censored = pd.read_parquet(\"hf://datasets/augmxnt/deccp/\" + splits[\"censored\"])\n",
-    "df_uncensored = pd.read_parquet(\"hf://datasets/augmxnt/deccp/\" + splits[\"uncensored\"])"
+    "df_censored = pd.read_parquet(f\"hf://datasets/augmxnt/deccp/{splits[\"censored\"]}\")\n",
+    "df_uncensored = pd.read_parquet(f\"hf://datasets/augmxnt/deccp/{splits[\"uncensored\"]}\")"
    ]
   },
   {
@@ -251,7 +251,8 @@
     "        \"aliased_name\": \"judge_censorship\",\n",
     "        \"params\": {\"prompt\": judge_prompt}\n",
     "    },\n",
-    "    \"answer_relevancy\", # non-parametrized result\n",
+    "    # non-parametrized metric\n",
+    "    \"answer_relevancy\", \n",
     "]\n",
     "common_params = {\n",
     "    \"dataset\" : \"DECCP\",\n",
@@ -282,14 +283,6 @@
     "else:\n",
     "    print(resp)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b68e82bb-b19c-4a5e-842a-f395a5d19bde",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
