--- a/notebooks/run_compliance.ipynb
+++ b/notebooks/run_compliance.ipynb
@@ -19,10 +19,10 @@
     "\n",
     "| Dataset Used                | Main Evaluation Objective                                | Key Metrics Evaluated                        | Notes                                                  |\n",
     "|----------------------------|----------------------------------------------------------|---------------------------------------------|--------------------------------------------------------|\n",
-    "| **llm-values/CIVICS**       | Assess cultural sensitivity and value variation          | `bias`, `answer_relevancy`, `faithfulness` | Measures cultural coherence and ideological neutrality  |\n",
-    "| **lmsys-toxic-chat**        | Detect and evaluate toxicity in LLM generations          | `toxicity`, `bias`, `answer_relevancy`      | Helps ensure moderation and safety of responses         |\n",
-    "| **crows-pairs**             | Analyze implicit linguistic and social biases            | `bias`, `answer_relevancy`, `faithfulness` | Evaluates robustness of responses against stereotypes   |\n",
-    "| **DECCP**                   | Measure censorship on information related to China        | `toxicity`, `bias`, `answer_relevancy`      | Focused on detecting censorship patterns in Chinese content |\n",
+    "| **llm-values/CIVICS**       | Assess cultural sensitivity and value variation          | `bias` | Measures cultural coherence and ideological neutrality  |\n",
+    "| **lmsys-toxic-chat**        | Detect and evaluate toxicity in LLM generations          | `toxicity` `bias`      | Helps ensure moderation and safety of responses         |\n",
+    "| **crows-pairs**             | Analyze implicit linguistic and social biases            | `bias` | Evaluates robustness of responses against stereotypes   |\n",
+    "| **DECCP**                   | Measure censorship on information related to China        | `toxicity` `bias`    | Focused on detecting censorship patterns in Chinese content |\n",
     "\n",
     "---\n",
     "\n",
@@ -31,22 +31,49 @@
     "\n",
     "| Metric             | What It Measures                                        | How to Interpret Results                                   |\n",
     "|--------------------|--------------------------------------------------------|------------------------------------------------------------|\n",
-    "| **answer_relevancy** | Relevance of answers to the posed question             | High score means the model answers accurately and pertinently |\n",
-    "| **bias**            | Level of bias or partiality in model responses          | Low score is desired; high score signals social or ethnic biases needing correction |\n",
-    "| **faithfulness**    | Factual accuracy and fidelity of responses               | High score indicates answers are truthful and factually correct |\n",
-    "| **toxicity**        | Presence of offensive, discriminatory or harmful content | Low score is mandatory to ensure ethical compliance and avoid toxic content |\n",
+    "| `bias`           | Level of bias or partiality in model responses          | Low score is desired; high score signals social or ethnic biases needing correction |\n",
+    "| `toxicity`       | Presence of offensive, discriminatory or harmful content | Low score is mandatory to ensure ethical compliance and avoid toxic content |\n",
     "\n",
     "---\n",
     "### ⚙️ Additional Technical Indicators\n",
     "| Indicator                   | Description                                             |\n",
     "|-----------------------------|---------------------------------------------------------|\n",
     "| `generation_time`            | Average time to generate responses                      |\n",
-    "| `nb_tokens_prompt` / `nb_tokens_completion` | Volume of text processed in prompts and completions         |\n",
+    "| `nb_tokens_prompt` `nb_tokens_completion` | Volume of text processed in prompts and completions         |\n",
     "| `energy_consumption`         | Energy consumed during inference                         |\n",
     "| `gwp_consumption`            | Carbon footprint (Global Warming Potential)             |\n",
     "\n",
     "---\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6c1296c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd4f7b4c",
+   "metadata": {},
+   "source": [
+    "## Compliance assessment campaign cost alert\n",
+    "\n",
+    "These datasets contain numerous questions. Launching a compliance campaign can be costly. We recommend:\n",
+    "- performing stratified sampling to reduce the number of questions while retaining the information contained\n",
+    "- setting repeat to a maximum of 3\n",
+    "- using a mini-type judge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48e92a5e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -294,18 +321,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "12ed5380",
    "metadata": {},
    "outputs": [],
    "source": [
     "products = \"ALBERT_API\"\n",
-    "JUDGE = \"gpt-4.1\""
+    "JUDGE = \"gpt-5-mini\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "e8e5b734",
    "metadata": {},
    "outputs": [
@@ -332,15 +359,15 @@
     "#metric for specific dataset\n",
     "datasets_metrics = {\n",
     "    \"llm-values-CIVICS\": {\n",
-    "        \"metrics\": [\"bias\", \"answer_relevancy\", \"faithfulness\"],\n",
+    "        \"metrics\": [\"bias\"],\n",
     "        \"impact_type\": \"Cultural_and_social_values\"\n",
     "    },\n",
     "    \"lmsys-toxic-chat\": {\n",
-    "        \"metrics\": [\"toxicity\", \"bias\", \"answer_relevancy\"],\n",
+    "        \"metrics\": [\"toxicity\", \"bias\"],\n",
     "        \"impact_type\": \"Toxicity\"\n",
     "    },\n",
     "    \"crows-pairs\": {\n",
-    "        \"metrics\": [\"bias\", \"answer_relevancy\", \"faithfulness\"],\n",
+    "        \"metrics\": [\"bias\"],\n",
     "        \"impact_type\": \"Social_biases\"\n",
     "    }\n",
     "}\n",
@@ -391,7 +418,7 @@
     "    expset = {\n",
     "        \"name\": expset_name,\n",
     "        \"readme\": expset_readme,\n",
-    "        \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\": 2},\n",
+    "        \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\": 3},\n",
     "    }\n",
     "    response = requests.post(f\"{EVALAP_API_URL}/experiment_set\", json=expset, headers=headers)\n",
     "    resp = response.json()\n",
