add info for sampling

--- a/notebooks/run_compliance.ipynb
+++ b/notebooks/run_compliance.ipynb
@@ -77,19 +77,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "fb6038d3-def4-4fc4-8ae2-4327af3e919f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/audrey_clevy/code/evalap/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
@@ -147,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9728f60f",
    "metadata": {},
    "outputs": [],
@@ -198,21 +189,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "999426e1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using the latest cached version of the dataset since llm-values/CIVICS couldn't be found on the Hugging Face Hub\n",
-      "Found the latest cached dataset configuration 'default' at /Users/audrey_clevy/.cache/huggingface/datasets/llm-values___civics/default/0.0.0/c72e554c36c3195effe8e26035c70eb559c3eee8 (last modified on Thu Oct  9 12:23:30 2025).\n",
-      "Using the latest cached version of the dataset since lmsys/toxic-chat couldn't be found on the Hugging Face Hub\n",
-      "Found the latest cached dataset configuration 'toxicchat1123' at /Users/audrey_clevy/.cache/huggingface/datasets/lmsys___toxic-chat/toxicchat1123/0.0.0/29df8e4dba60e1f4af4b4075c0705c5b313548a8 (last modified on Thu Oct  9 13:09:16 2025).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#  datasets HuggingFace\n",
     "df_civics = load_hf_dataset(\"llm-values/CIVICS\", split=\"test\")\n",
@@ -224,24 +204,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "ebacab6c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(700, 12)\n",
-      "(5082, 7)\n",
-      "(3016, 1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(df_civics.shape)\n",
     "print(df_toxic_chat.shape)\n",
     "print(df_crows.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c2622e7",
+   "metadata": {},
+   "source": [
+    "Consider performing stratified sampling before posting your dataset if it is too large."
    ]
   },
   {
@@ -254,20 +232,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e2a47283",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset 'llm-values-CIVICS' publié avec succès (ID: 81)\n",
-      "Dataset 'lmsys-toxic-chat' publié avec succès (ID: 82)\n",
-      "Dataset 'crows-pairs' publié avec succès (ID: 83)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "post_dataset_to_api(\n",
     "    name=\"llm-values-CIVICS\",\n",
@@ -335,17 +303,7 @@
    "execution_count": null,
    "id": "e8e5b734",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error creating experiment set for llm-values-CIVICS: {'error': 'DuplicateEntryError', 'detail': \"Duplicate entry detected for constraint 'experiment_sets_name_key': name = ALBERT_API_base_on_Cultural_and_social_values\", 'key': 'name', 'value': 'ALBERT_API_base_on_Cultural_and_social_values'}\n",
-      "Error creating experiment set for lmsys-toxic-chat: {'error': 'DuplicateEntryError', 'detail': \"Duplicate entry detected for constraint 'experiment_sets_name_key': name = ALBERT_API_base_on_Toxicity\", 'key': 'name', 'value': 'ALBERT_API_base_on_Toxicity'}\n",
-      "Error creating experiment set for crows-pairs: {'error': 'DuplicateEntryError', 'detail': \"Duplicate entry detected for constraint 'experiment_sets_name_key': name = ALBERT_API_base_on_Social_biases\", 'key': 'name', 'value': 'ALBERT_API_base_on_Social_biases'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# Common technical metrics\n",
