--- a/notebooks/run_compliance.ipynb
+++ b/notebooks/run_compliance.ipynb
@@ -152,7 +152,7 @@
     "\n",
     "def load_hf_dataset(hf_path, split, hf_kwargs=None):\n",
     "    try:\n",
-    "        ds = load_dataset(hf_path, split=split, use_auth_token=HF_HUB_TOKEN, **(hf_kwargs or {}))\n",
+    "        ds = load_dataset(hf_path, split=split, **(hf_kwargs or {}))\n",
     "    except Exception:\n",
     "        ds = load_dataset(hf_path, split=split, download_mode=\"reuse_cache_if_exists\", **(hf_kwargs or {}))\n",
     "    return ds.to_pandas()\n",
