--- a/notebooks/albert-evals-RAG.ipynb
+++ b/notebooks/albert-evals-RAG.ipynb
@@ -12,81 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "ecb4a91a-09aa-49dc-8d1c-682ca14b111f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created expset: Albert - RAG - (MFS_questions_v01) v4-10-25 (75)\n",
-      "Created expset: Albert - RAG - (Assistant IA - QA) v4-10-25 (76)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Design and tun the experiments\n",
-    "# --\n",
-    "for dataset in [\"MFS_questions_v01\",  \"Assistant IA - QA\"]:\n",
-    "    expset_name = f\"Albert - RAG - ({dataset}) v4-10-25\"\n",
-    "    expset_readme = f\"Comparing Albert RAG Models on dataset {dataset}\"\n",
-    "    metrics = [\"judge_precision\", \"contextual_relevancy\", \"output_length\", \"generation_time\"]\n",
-    "    common_params = {\n",
-    "        \"dataset\" : \"MFS_questions_v01\",\n",
-    "        \"model\": {\"sampling_params\" : {\"temperature\": 0.2}},\n",
-    "        \"metrics\" : metrics,\n",
-    "        \"judge_model\": \"gpt-4.1\",\n",
-    "    }\n",
-    "    grid_params = {\n",
-    "        \"model\": [\n",
-    "            {\n",
-    "                \"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
-    "                \"aliased_name\": \"albert-large-semantic-elastic-k5\",\n",
-    "                \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"semantic\", \"collections\": [784,785], \"k\":5}},\n",
-    "                \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY\n",
-    "            },\n",
-    "            {\n",
-    "                \"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
-    "                \"aliased_name\": \"albert-large-hybrid-elastic-k5\",\n",
-    "                \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"hybrid\", \"collections\": [784,785], \"k\":5}},\n",
-    "                \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY\n",
-    "            },\n",
-    "            {\n",
-    "                \"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
-    "                \"aliased_name\": \"albert-large-semantic-elastic-k10\",\n",
-    "                \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"semantic\", \"collections\": [784,785], \"k\":10}},\n",
-    "                \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY\n",
-    "            },\n",
-    "            {\n",
-    "                \"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
-    "                \"aliased_name\": \"albert-large-hybrid-elastic-k10\",\n",
-    "                \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"hybrid\", \"collections\": [784,785], \"k\":10}},\n",
-    "                \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY\n",
-    "            },\n",
-    "            # Raw\n",
-    "            {\"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
-    "        ],\n",
-    "    }\n",
-    "    \n",
-    "    # Lauching the experiment set\n",
-    "    expset = {\n",
-    "        \"name\" : expset_name, \n",
-    "        \"readme\": expset_readme,\n",
-    "        \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\":2}\n",
-    "    }\n",
-    "    response = requests.post(f'{EG1_API_URL}/experiment_set', json=expset, headers=headers)\n",
-    "    resp = response.json()\n",
-    "    if \"id\" in resp:\n",
-    "        expset_id = resp[\"id\"]\n",
-    "        print(f'Created expset: {resp[\"name\"]} ({resp[\"id\"]})')\n",
-    "    else:\n",
-    "        print(resp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "587a2251-9dc2-4a66-b48f-3eb49cf6b5bf",
    "metadata": {},
    "outputs": [],
@@ -104,9 +30,11 @@
     "dotenv.load_dotenv(\"../.env\")\n",
     "sys.path.append(\"..\")\n",
     "\n",
-    "#EG1_API_URL = \"http://localhost:8000/v1\"\n",
-    "EG1_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
+    "EG1_API_URL = \"http://localhost:8000/v1\"\n",
+    "#EG1_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
     "EG1_API_KEY = os.getenv(\"EVALAP_API_KEY\") \n",
+    "ALBERT_API_URL_LOCAL = \"http://localhost:8002/v1\"\n",
+    "ALBERT_API_KEY_LOCAL = os.getenv(\"ALBERT_API_KEY_\")\n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
     "ALBERT_API_URL_DEV = \"https://albert.api.dev.etalab.gouv.fr/v1\"\n",
@@ -118,7 +46,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
+   "id": "ecb4a91a-09aa-49dc-8d1c-682ca14b111f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created expset: Albert - RAG (lexical boosting) v31-10-25 (42)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Design and tun the experiments\n",
+    "# --\n",
+    "expset_name = f\"Albert - RAG (lexical boosting) v29-10-25\"\n",
+    "expset_readme = f\"Comparing Albert RAG Models on french administration Q/A\"\n",
+    "metrics = [\"judge_precision\", \"output_length\", \"generation_time\"]\n",
+    "common_params = {\n",
+    "    \"model\": {\"sampling_params\" : {\"temperature\": 0.2}},\n",
+    "    \"metrics\" : metrics,\n",
+    "    \"judge_model\": \"gpt-4.1\",\n",
+    "}\n",
+    "grid_params = {\n",
+    "    \"dataset\": [\"MFS_questions_v01\",  \"Assistant IA - QA\"],\n",
+    "    \"model\": [\n",
+    "        {\n",
+    "            \"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
+    "            \"aliased_name\": \"albert-large-semantic-elastic-prod\",\n",
+    "            \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"semantic\", \"collections\": [783,784,785], \"k\":7}},\n",
+    "            \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY\n",
+    "        },\n",
+    "        {\n",
+    "            \"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
+    "            \"aliased_name\": \"albert-large-hybrid-elastic-prod\",\n",
+    "            \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"hybrid\", \"collections\": [783, 784,785], \"k\":5}},\n",
+    "            \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY\n",
+    "        },\n",
+    "        {\n",
+    "            \"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
+    "            \"aliased_name\": \"albert-large-hybrid-elastic-boost\",\n",
+    "            \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"hybrid\", \"collections\": [5,6,8], \"k\":5}},\n",
+    "            \"base_url\": ALBERT_API_URL_LOCAL, \"api_key\": ALBERT_API_KEY_LOCAL\n",
+    "        },\n",
+    "        # Raw/baseline\n",
+    "        {\"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
+    "    ],\n",
+    "}\n",
+    "\n",
+    "# Lauching the experiment set\n",
+    "expset = {\n",
+    "    \"name\" : expset_name, \n",
+    "    \"readme\": expset_readme,\n",
+    "    \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\":2}\n",
+    "}\n",
+    "response = requests.post(f'{EG1_API_URL}/experiment_set', json=expset, headers=headers)\n",
+    "resp = response.json()\n",
+    "if \"id\" in resp:\n",
+    "    expset_id = resp[\"id\"]\n",
+    "    print(f'Created expset: {resp[\"name\"]} ({resp[\"id\"]})')\n",
+    "else:\n",
+    "    print(resp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "dcfcd6b6-0019-4c19-915d-623ab8e4d045",
    "metadata": {},
    "outputs": [
@@ -126,7 +120,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Patched expset: albert-api-rag-mfs-v2 (68)\n"
+      "Patched expset: Albert - RAG (lexical boosting) v31-10-25 (42)\n"
      ]
     }
    ],
@@ -134,22 +128,18 @@
     "# Patching the experiment set\n",
     "\n",
     "common_params = {\n",
-    "    \"dataset\" : \"MFS_questions_v01\",\n",
     "    \"model\": {\"sampling_params\" : {\"temperature\": 0.2}},\n",
     "    \"metrics\" : metrics,\n",
     "    \"judge_model\": \"gpt-4.1\",\n",
     "}\n",
     "grid_params = {\n",
+    "    \"dataset\": [\"MFS_questions_v01\",  \"Assistant IA - QA\"],\n",
     "    \"model\": [\n",
     "        {\n",
     "            \"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
-    "            \"aliased_name\": \"albert-large-dry-3.2\",\n",
-    "            \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY\n",
-    "        },\n",
-    "        {\n",
-    "            \"name\": \"mistralai/Mistral-Small-3.1-24B-Instruct-2503\", \n",
-    "            \"aliased_name\": \"albert-large-dry-3.1\",\n",
-    "            \"base_url\": ALBERT_API_URL_DEV, \"api_key\": ALBERT_API_KEY_DEV\n",
+    "            \"aliased_name\": \"albert-large-hybrid-elastic-boost-v4-20chunk\",\n",
+    "            \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"hybrid\", \"collections\": [16,17,18], \"k\":20}},\n",
+    "            \"base_url\": ALBERT_API_URL_LOCAL, \"api_key\": ALBERT_API_KEY_LOCAL\n",
     "        },\n",
     "\n",
     "    ],\n",
@@ -157,7 +147,7 @@
     "\n",
     "expset = {\n",
     "\n",
-    "    \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\":5}\n",
+    "    \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\":2}\n",
     "}\n",
     "response = requests.patch(f'{EG1_API_URL}/experiment_set/{expset_id}', json=expset, headers=headers)\n",
     "resp = response.json()\n",
@@ -167,87 +157,6 @@
     "else:\n",
     "    print(resp)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "e6d54607-6e3d-4763-b028-6d65cb7b6603",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "expset_name = \"albert-api-rag-mfs-v3\"\n",
-    "expset_readme = \"Evaluating hybrid search on MFS dataset.\"\n",
-    "metrics = [\"judge_precision\", \"output_length\", \"generation_time\"]\n",
-    "common_params = {\n",
-    "    \"dataset\" : \"MFS_questions_v01\",\n",
-    "    \"model\": {\"sampling_params\" : {\"temperature\": 0.2}},\n",
-    "    \"metrics\" : metrics,\n",
-    "    \"judge_model\": \"gpt-4.1\",\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "127969d5-6c86-4742-88e6-c7bbf552e27f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Patched expset: albert-api-rag-mfs-v3 (68)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Patching the experiment set\n",
-    "\n",
-    "common_params = {\n",
-    "    \"dataset\" : \"MFS_questions_v01\",\n",
-    "    \"model\": {\"sampling_params\" : {\"temperature\": 0.2}},\n",
-    "    \"metrics\" : metrics,\n",
-    "    \"judge_model\": \"gpt-4.1\",\n",
-    "}\n",
-    "grid_params = {\n",
-    "    \"model\": [\n",
-    "        {\n",
-    "            \"name\": \"mistralai/Mistral-Small-3.1-24B-Instruct-2503\", \n",
-    "            \"aliased_name\": \"albert-large-hybrid-web-elastic\",\n",
-    "            \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"hybrid\", \"web_search\": True, \"k\":10}},\n",
-    "            \"base_url\": ALBERT_API_URL_DEV, \"api_key\": ALBERT_API_KEY_DEV\n",
-    "        },\n",
-    "        {\n",
-    "            \"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
-    "            \"aliased_name\": \"albert-large-semantic-web-qdrant\",\n",
-    "            \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"semantic\", \"web_search\": True, \"k\":10}},\n",
-    "            \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY\n",
-    "        },\n",
-    "        \n",
-    "\n",
-    "    ],\n",
-    "}\n",
-    "\n",
-    "expset = {\n",
-    "\n",
-    "    \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\":5}\n",
-    "}\n",
-    "response = requests.patch(f'{EG1_API_URL}/experiment_set/{expset_id}', json=expset, headers=headers)\n",
-    "resp = response.json()\n",
-    "if \"id\" in resp:\n",
-    "    expset_id = resp[\"id\"]\n",
-    "    print(f'Patched expset: {resp[\"name\"]} ({resp[\"id\"]})')\n",
-    "else:\n",
-    "    print(resp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc2ca1dd-d313-458f-a316-2aa5ecfd3a4e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
