--- a/notebooks/RAG_evaluation.ipynb
+++ b/notebooks/RAG_evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "f33fde59-7aff-4f16-898d-95497d084548",
    "metadata": {},
    "outputs": [],
@@ -10,17 +10,21 @@
     "import os\n",
     "import sys\n",
     "import time\n",
+    "from io import StringIO\n",
+    "import concurrent.futures\n",
     "\n",
     "import dotenv\n",
     "from IPython.display import HTML\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import requests\n",
+    "from jinja2 import Template\n",
+    "\n",
     "\n",
     "dotenv.load_dotenv(\"../.env\")\n",
     "\n",
-    "EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
-    "#EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
+    "#EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
+    "EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
     "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\") \n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
@@ -31,11 +35,250 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0867c195-260b-4d93-9abc-2337c9ba7c45",
+   "execution_count": 12,
+   "id": "64cb00e3-0309-4af1-b4e7-e92703de47c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>query</th>\n",
+       "      <th>output_true</th>\n",
+       "      <th>snippets</th>\n",
+       "      <th>dataset_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Consider the Marketing Affiliate Agreement bet...</td>\n",
+       "      <td>This agreement shall begin upon the date of it...</td>\n",
+       "      <td>[{'file_path': 'cuad/CybergyHoldingsInc_201405...</td>\n",
+       "      <td>cuad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Consider the Marketing Affiliate Agreement bet...</td>\n",
+       "      <td>This agreement shall begin upon the date of it...</td>\n",
+       "      <td>[{'file_path': 'cuad/CybergyHoldingsInc_201405...</td>\n",
+       "      <td>cuad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Consider the Marketing Affiliate Agreement bet...</td>\n",
+       "      <td>This Agreement may be terminated by either par...</td>\n",
+       "      <td>[{'file_path': 'cuad/CybergyHoldingsInc_201405...</td>\n",
+       "      <td>cuad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Consider the Marketing Affiliate Agreement bet...</td>\n",
+       "      <td>This Agreement is accepted by Company in the S...</td>\n",
+       "      <td>[{'file_path': 'cuad/CybergyHoldingsInc_201405...</td>\n",
+       "      <td>cuad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Consider the Marketing Affiliate Agreement bet...</td>\n",
+       "      <td>MA may not assign, sell, lease or otherwise tr...</td>\n",
+       "      <td>[{'file_path': 'cuad/CybergyHoldingsInc_201405...</td>\n",
+       "      <td>cuad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6884</th>\n",
+       "      <td>Consider VELCO's Non-Disclosure Agreement; Doe...</td>\n",
+       "      <td>For purposes of this Agreement, “BCSI” shall m...</td>\n",
+       "      <td>[{'file_path': 'contractnli/VELCO%20NDA%20rev0...</td>\n",
+       "      <td>contractnli</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6885</th>\n",
+       "      <td>Consider VELCO's Non-Disclosure Agreement; Doe...</td>\n",
+       "      <td>The foregoing notwithstanding, the Recipient m...</td>\n",
+       "      <td>[{'file_path': 'contractnli/VELCO%20NDA%20rev0...</td>\n",
+       "      <td>contractnli</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6886</th>\n",
+       "      <td>Consider VELCO's Non-Disclosure Agreement; Doe...</td>\n",
+       "      <td>5. In the event that the Recipient is required...</td>\n",
+       "      <td>[{'file_path': 'contractnli/VELCO%20NDA%20rev0...</td>\n",
+       "      <td>contractnli</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6887</th>\n",
+       "      <td>Consider VELCO's Non-Disclosure Agreement; Doe...</td>\n",
+       "      <td>The foregoing notwithstanding, the Recipient m...</td>\n",
+       "      <td>[{'file_path': 'contractnli/VELCO%20NDA%20rev0...</td>\n",
+       "      <td>contractnli</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6888</th>\n",
+       "      <td>Consider VELCO's Non-Disclosure Agreement; Doe...</td>\n",
+       "      <td>4. Recipient and each of its Representatives s...</td>\n",
+       "      <td>[{'file_path': 'contractnli/VELCO%20NDA%20rev0...</td>\n",
+       "      <td>contractnli</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6889 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  query  \\\n",
+       "0     Consider the Marketing Affiliate Agreement bet...   \n",
+       "1     Consider the Marketing Affiliate Agreement bet...   \n",
+       "2     Consider the Marketing Affiliate Agreement bet...   \n",
+       "3     Consider the Marketing Affiliate Agreement bet...   \n",
+       "4     Consider the Marketing Affiliate Agreement bet...   \n",
+       "...                                                 ...   \n",
+       "6884  Consider VELCO's Non-Disclosure Agreement; Doe...   \n",
+       "6885  Consider VELCO's Non-Disclosure Agreement; Doe...   \n",
+       "6886  Consider VELCO's Non-Disclosure Agreement; Doe...   \n",
+       "6887  Consider VELCO's Non-Disclosure Agreement; Doe...   \n",
+       "6888  Consider VELCO's Non-Disclosure Agreement; Doe...   \n",
+       "\n",
+       "                                            output_true  \\\n",
+       "0     This agreement shall begin upon the date of it...   \n",
+       "1     This agreement shall begin upon the date of it...   \n",
+       "2     This Agreement may be terminated by either par...   \n",
+       "3     This Agreement is accepted by Company in the S...   \n",
+       "4     MA may not assign, sell, lease or otherwise tr...   \n",
+       "...                                                 ...   \n",
+       "6884  For purposes of this Agreement, “BCSI” shall m...   \n",
+       "6885  The foregoing notwithstanding, the Recipient m...   \n",
+       "6886  5. In the event that the Recipient is required...   \n",
+       "6887  The foregoing notwithstanding, the Recipient m...   \n",
+       "6888  4. Recipient and each of its Representatives s...   \n",
+       "\n",
+       "                                               snippets dataset_name  \n",
+       "0     [{'file_path': 'cuad/CybergyHoldingsInc_201405...         cuad  \n",
+       "1     [{'file_path': 'cuad/CybergyHoldingsInc_201405...         cuad  \n",
+       "2     [{'file_path': 'cuad/CybergyHoldingsInc_201405...         cuad  \n",
+       "3     [{'file_path': 'cuad/CybergyHoldingsInc_201405...         cuad  \n",
+       "4     [{'file_path': 'cuad/CybergyHoldingsInc_201405...         cuad  \n",
+       "...                                                 ...          ...  \n",
+       "6884  [{'file_path': 'contractnli/VELCO%20NDA%20rev0...  contractnli  \n",
+       "6885  [{'file_path': 'contractnli/VELCO%20NDA%20rev0...  contractnli  \n",
+       "6886  [{'file_path': 'contractnli/VELCO%20NDA%20rev0...  contractnli  \n",
+       "6887  [{'file_path': 'contractnli/VELCO%20NDA%20rev0...  contractnli  \n",
+       "6888  [{'file_path': 'contractnli/VELCO%20NDA%20rev0...  contractnli  \n",
+       "\n",
+       "[6889 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Fetch the dataset from Evalap\n",
+    "# --\n",
+    "dataset_name = \"LegalBenchRAG\"\n",
+    "response = requests.get(\n",
+    "    f\"{EVALAP_API_URL}/dataset?name={dataset_name}&with_df=true\",\n",
+    "    headers={\"Authorization\": f\"Bearer {EVALAP_API_KEY}\"},\n",
+    ")\n",
+    "response.raise_for_status()\n",
+    "dataset = response.json()\n",
+    "dataset_df =  pd.read_json(StringIO(dataset[\"df\"]))\n",
+    "dataset_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "474ad967-2543-4f4d-91d0-24abe091d9fd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Build 1000 random index to worl with a subset of the dataset in order to do faster and cheaper evalaution\n",
+    "# --\n",
+    "N = len(dataset_df) # Size of the \n",
+    "rng = np.random.default_rng(43)\n",
+    "sample = rng.choice(np.arange(N+1), size=1000, replace=False)\n",
+    "sample = sample.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "0867c195-260b-4d93-9abc-2337c9ba7c45",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created expset: LegalBenchRAG Evalaution (102)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initial NORAG experiments\n",
+    "# --\n",
+    "\n",
+    "expset_name = \"LegalBenchRAG Evaluation\"\n",
+    "expset_readme = \"A extensive RAG evaluation on the LEgalBecnhRAF dataset. See [complete me]\"\n",
+    "common_params = {\n",
+    "    \"dataset\": dataset[\"name\"],\n",
+    "    \"metrics\": [\"judge_precision\", \"output_length\"],\n",
+    "    \"judge_model\": {\n",
+    "        \"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY\n",
+    "    },\n",
+    "    \"sample\": sample,\n",
+    "}\n",
+    "\n",
+    "grid_params = {\n",
+    "    \"model\": [\n",
+    "        {\"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY}\n",
+    "    ],\n",
+    "}\n",
+    "\n",
+    "expset = {\n",
+    "    \"name\": expset_name,\n",
+    "    \"readme\": expset_readme,\n",
+    "    \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\": 1},\n",
+    "}\n",
+    "\n",
+    "response = requests.post(\n",
+    "    f\"{EVALAP_API_URL}/experiment_set\",\n",
+    "    headers={\"Authorization\": f\"Bearer {EVALAP_API_KEY}\", \"Content-Encoding\": \"gzip\"},\n",
+    "    json=expset,\n",
+    ")\n",
+    "resp = response.json()\n",
+    "if \"id\" in resp:\n",
+    "    expset_id = resp[\"id\"]\n",
+    "    print(f'Created expset: {resp[\"name\"]} ({resp[\"id\"]})')\n",
+    "else:\n",
+    "    print(resp)"
+   ]
   }
  ],
  "metadata": {
