--- a/notebooks/create_legalbenchrag_dataset.ipynb
+++ b/notebooks/create_legalbenchrag_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "f33fde59-7aff-4f16-898d-95497d084548",
    "metadata": {},
    "outputs": [],
@@ -19,8 +19,8 @@
     "\n",
     "dotenv.load_dotenv(\"../.env\")\n",
     "\n",
-    "EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
-    "#EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
+    "#EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
+    "EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
     "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\") \n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "0867c195-260b-4d93-9abc-2337c9ba7c45",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
        "[6889 rows x 4 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "c8e78237-7de5-4fdf-bd14-08904d3e83d8",
    "metadata": {},
    "outputs": [
@@ -245,15 +245,15 @@
        " 'default_metric': 'judge_precision',\n",
        " 'columns_map': None,\n",
        " 'compliance': False,\n",
-       " 'id': 6,\n",
-       " 'created_at': '2025-12-03T21:00:26.296997',\n",
+       " 'id': 86,\n",
+       " 'created_at': '2025-12-03T22:21:56.709429',\n",
        " 'size': 6889,\n",
        " 'columns': ['query', 'output_true', 'snippets', 'dataset_name'],\n",
        " 'parquet_size': 0,\n",
        " 'parquet_columns': []}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
