--- a/notebooks/RAG_evaluation.ipynb
+++ b/notebooks/RAG_evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "f33fde59-7aff-4f16-898d-95497d084548",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,6 @@
     "import requests\n",
     "from jinja2 import Template\n",
     "\n",
-    "\n",
     "dotenv.load_dotenv(\"../.env\")\n",
     "\n",
     "#EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
@@ -35,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "64cb00e3-0309-4af1-b4e7-e92703de47c4",
    "metadata": {},
    "outputs": [
@@ -192,7 +191,7 @@
        "[6889 rows x 4 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,12 +212,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "474ad967-2543-4f4d-91d0-24abe091d9fd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Build 1000 random index to worl with a subset of the dataset in order to do faster and cheaper evalaution\n",
+    "# Build 1000 random index to work with a subset of the dataset in order to do faster and cheaper evaluation\n",
     "# --\n",
     "N = len(dataset_df) # Size of the \n",
     "rng = np.random.default_rng(43)\n",
@@ -228,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "0867c195-260b-4d93-9abc-2337c9ba7c45",
    "metadata": {},
    "outputs": [
@@ -236,7 +235,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created expset: LegalBenchRAG Evalaution (102)\n"
+      "Created expset: LegalBenchRAG Evaluation (103)\n"
      ]
     }
    ],
@@ -245,10 +244,14 @@
     "# --\n",
     "\n",
     "expset_name = \"LegalBenchRAG Evaluation\"\n",
-    "expset_readme = \"A extensive RAG evaluation on the LEgalBecnhRAF dataset. See [complete me]\"\n",
+    "expset_readme = \"A extensive RAG evaluation on the LegalBecnhRAG dataset. See [complete me]\"\n",
+    "\n",
+    "system_prompt = \"Tu es un agent qui répond aux questions des usagers des services publiques et citoyens de manière précise, concise et direct. Ne cite pas les sources/contexte si donnée.\"\n",
+    "\n",
     "common_params = {\n",
     "    \"dataset\": dataset[\"name\"],\n",
     "    \"metrics\": [\"judge_precision\", \"output_length\"],\n",
+    "    \"model\": {\"sampling_params\" : {\"temperature\": 0.2}, \"system_prompt\": system_prompt},\n",
     "    \"judge_model\": {\n",
     "        \"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY\n",
     "    },\n",
@@ -278,6 +281,142 @@
     "    print(f'Created expset: {resp[\"name\"]} ({resp[\"id\"]})')\n",
     "else:\n",
     "    print(resp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "7c5d819c-d820-4584-ad9d-c9ec04a2d443",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add the evalap repo into the workspace\n",
+    "# @FUTURE: !pip install evalap\n",
+    "sys.path.append(\"../\")\n",
+    "from evalap.clients.llm import LlmClient, split_think_answer\n",
+    "from evalap.rag.search import SearchEngineClient\n",
+    "\n",
+    "sampling_params = {\"temperature\": 0.2}\n",
+    "collection_name = \"legalbenchrag_v1\"\n",
+    "model_embedding = \"BAAI/bge-m3\"\n",
+    "limit = 7\n",
+    "\n",
+    "system_prompt = \"Tu es un agent de l'état Français qui répond en langue française aux questions des usagers des services publiques et citoyens de manière précise, concrète et concise.\"\n",
+    "rag_prompt = Template(\"\"\"Utilise les sources d'informations suivantes comme source de vérité si elle adresse la question :\n",
+    "\n",
+    "<SOURCE>\n",
+    "{% for chunk in chunks %}\n",
+    "{{chunk.text}}\n",
+    "\n",
+    "---\n",
+    "\n",
+    "{% endfor %}\n",
+    "</SOURCE>\n",
+    "\n",
+    "QUESTION: \n",
+    "{{query}}\n",
+    "\"\"\")\n",
+    "\n",
+    "# Augment a prompt with collection search\n",
+    "def do_rag(query, limit=limit, model_embedding=model_embedding):\n",
+    "    # Search relevant chunks\n",
+    "    se_client = SearchEngineClient()\n",
+    "    hits = se_client.search(collection_name, query, limit=limit, model_embedding=model_embedding)\n",
+    "    # Render prompt\n",
+    "    return rag_prompt.render(query=query, chunks=hits, limit=limit)\n",
+    "\n",
+    "# The LLM core generation\n",
+    "def generate_with_rag(model, prompt, system_prompt=system_prompt, with_rag=True, limit=limit, model_embedding=model_embedding):\n",
+    "    if with_rag:\n",
+    "        prompt = do_rag(prompt, limit=limit, model_embedding=model_embedding)\n",
+    "    \n",
+    "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
+    "    if system_prompt:\n",
+    "        messages = [{\"role\": \"system\", \"content\": system_prompt}] + messages\n",
+    "        \n",
+    "    aiclient = LlmClient()\n",
+    "    result = aiclient.generate(model=model, messages=messages, **sampling_params)\n",
+    "    observation = result.choices[0].message.content\n",
+    "    think, answer = split_think_answer(observation)\n",
+    "    return answer\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "31b924c1-0f80-4f89-a266-07bafe389364",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Utilise les sources d'informations suivantes comme source de vérité si elle adresse la question :\n",
+      "\n",
+      "<SOURCE>\n",
+      "\n",
+      "1\n",
+      "\n",
+      "Source: CNS PHARMACEUTICALS, INC., 8-K, 3/26/2020\n",
+      "\n",
+      "---\n",
+      "\n",
+      "\n",
+      "2\n",
+      "\n",
+      "Source: CNS PHARMACEUTICALS, INC., 8-K, 3/26/2020\n",
+      "\n",
+      "---\n",
+      "\n",
+      "\n",
+      "4\n",
+      "\n",
+      "Source: CNS PHARMACEUTICALS, INC., 8-K, 3/26/2020\n",
+      "\n",
+      "---\n",
+      "\n",
+      "\n",
+      "</SOURCE>\n",
+      "\n",
+      "QUESTION: \n",
+      "CNI\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(do_rag(\"CNI\", limit=3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c44dfa6c-61c3-4bda-bd42-a17e9611b3ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Async computing -- RAG generation\n",
+    "# --\n",
+    "\n",
+    "# The models to runs\n",
+    "models = [\"mistralai/Mistral-Small-3.2-24B-Instruct-2506\"]\n",
+    "\n",
+    "# the input prompts to answer\n",
+    "prompts = []\n",
+    "for i, row in dataset_df.iterrows():\n",
+    "    prompts.append(do_rag(row[\"query\"]))\n",
+    "\n",
+    "# Loop over the model to try\n",
+    "model_raws = []\n",
+    "for model in models:\n",
+    "    # Async over the prompts\n",
+    "    with concurrent.futures.ThreadPoolExecutor(max_workers=8) as executor:\n",
+    "        # Create a list of model arguments (same model repeated for each prompt)\n",
+    "        model_args = [model] * len(prompts)\n",
+    "\n",
+    "        # Map generate over pairs of (model, prompt)\n",
+    "        results = list(executor.map(generate_with_rag, model_args, prompts))\n",
+    "\n",
+    "    model_raws.append(results)"
    ]
   }
  ],
