fix: RAG notebook

--- a/notebooks/RAG_evaluation.ipynb
+++ b/notebooks/RAG_evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "f33fde59-7aff-4f16-898d-95497d084548",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "64cb00e3-0309-4af1-b4e7-e92703de47c4",
    "metadata": {},
    "outputs": [
@@ -191,7 +191,7 @@
        "[6889 rows x 4 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "474ad967-2543-4f4d-91d0-24abe091d9fd",
    "metadata": {},
    "outputs": [],
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "7c5d819c-d820-4584-ad9d-c9ec04a2d443",
    "metadata": {},
    "outputs": [],
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "31b924c1-0f80-4f89-a266-07bafe389364",
    "metadata": {},
    "outputs": [
@@ -389,6 +389,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "4cde1a5a-3e03-40ae-a4c8-e58789b0fe78",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "query           Consider the Marketing Affiliate Agreement bet...\n",
+       "output_true     This agreement shall begin upon the date of it...\n",
+       "snippets        [{'file_path': 'cuad/CybergyHoldingsInc_201405...\n",
+       "dataset_name                                                 cuad\n",
+       "Name: 0, dtype: object"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset_df.iloc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "c44dfa6c-61c3-4bda-bd42-a17e9611b3ca",
    "metadata": {},
@@ -400,19 +425,15 @@
     "# The models to runs\n",
     "models = [\"mistralai/Mistral-Small-3.2-24B-Instruct-2506\"]\n",
     "\n",
-    "# the input prompts to answer\n",
-    "prompts = []\n",
-    "for i, row in dataset_df.iterrows():\n",
-    "    prompts.append(do_rag(row[\"query\"]))\n",
-    "\n",
     "# Loop over the model to try\n",
     "model_raws = []\n",
     "for model in models:\n",
+    "    # Create a list of model arguments (same model repeated for each prompt)\n",
+    "    prompts = dataset_df.iloc[sample]['query'].tolist()\n",
+    "    model_args = [model] * len(prompts)\n",
+    "\n",
     "    # Async over the prompts\n",
     "    with concurrent.futures.ThreadPoolExecutor(max_workers=8) as executor:\n",
-    "        # Create a list of model arguments (same model repeated for each prompt)\n",
-    "        model_args = [model] * len(prompts)\n",
-    "\n",
     "        # Map generate over pairs of (model, prompt)\n",
     "        results = list(executor.map(generate_with_rag, model_args, prompts))\n",
     "\n",
