--- a/notebooks/RAG_evaluation.ipynb
+++ b/notebooks/RAG_evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 72,
    "id": "f33fde59-7aff-4f16-898d-95497d084548",
    "metadata": {},
    "outputs": [],
@@ -22,8 +22,8 @@
     "\n",
     "dotenv.load_dotenv(\"../.env\")\n",
     "\n",
-    "#EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
-    "EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
+    "EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
+    "#EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
     "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\") \n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 73,
    "id": "64cb00e3-0309-4af1-b4e7-e92703de47c4",
    "metadata": {},
    "outputs": [
@@ -191,7 +191,7 @@
        "[6889 rows x 4 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 76,
    "id": "474ad967-2543-4f4d-91d0-24abe091d9fd",
    "metadata": {},
    "outputs": [],
@@ -221,13 +221,13 @@
     "# --\n",
     "N = len(dataset_df) # Size of the \n",
     "rng = np.random.default_rng(43)\n",
-    "sample = rng.choice(np.arange(N+1), size=1000, replace=False)\n",
+    "sample = rng.choice(np.arange(N+1), size=5, replace=False)\n",
     "sample = sample.tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 78,
    "id": "0867c195-260b-4d93-9abc-2337c9ba7c45",
    "metadata": {},
    "outputs": [
@@ -235,7 +235,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created expset: LegalBenchRAG Evaluation (103)\n"
+      "Created expset: LegalBenchRAG Evaluation v1 (47)\n"
      ]
     }
    ],
@@ -243,15 +243,16 @@
     "# Initial NORAG experiments\n",
     "# --\n",
     "\n",
-    "expset_name = \"LegalBenchRAG Evaluation\"\n",
+    "expset_name = \"LegalBenchRAG Evaluation v1\"\n",
     "expset_readme = \"A extensive RAG evaluation on the LegalBecnhRAG dataset. See [complete me]\"\n",
     "\n",
-    "system_prompt = \"Tu es un agent qui répond aux questions des usagers des services publiques et citoyens de manière précise, concise et direct. Ne cite pas les sources/contexte si donnée.\"\n",
+    "system_prompt = \"Réponds de manière simple et direct à la question sans aucune explication. Ne cite pas les sources/contexte si donnée.\"\n",
+    "sampling_params = {\"temperature\": 0.2}\n",
     "\n",
     "common_params = {\n",
     "    \"dataset\": dataset[\"name\"],\n",
     "    \"metrics\": [\"judge_precision\", \"output_length\"],\n",
-    "    \"model\": {\"sampling_params\" : {\"temperature\": 0.2}, \"system_prompt\": system_prompt},\n",
+    "    \"model\": {\"sampling_params\" : sampling_params, \"system_prompt\": system_prompt},\n",
     "    \"judge_model\": {\n",
     "        \"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY\n",
     "    },\n",
@@ -285,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "id": "7c5d819c-d820-4584-ad9d-c9ec04a2d443",
    "metadata": {},
    "outputs": [],
@@ -296,12 +297,7 @@
     "from evalap.clients.llm import LlmClient, split_think_answer\n",
     "from evalap.rag.search import SearchEngineClient\n",
     "\n",
-    "sampling_params = {\"temperature\": 0.2}\n",
-    "collection_name = \"legalbenchrag_v1\"\n",
-    "model_embedding = \"BAAI/bge-m3\"\n",
-    "limit = 7\n",
     "\n",
-    "system_prompt = \"Tu es un agent de l'état Français qui répond en langue française aux questions des usagers des services publiques et citoyens de manière précise, concrète et concise.\"\n",
     "rag_prompt = Template(\"\"\"Utilise les sources d'informations suivantes comme source de vérité si elle adresse la question :\n",
     "\n",
     "<SOURCE>\n",
@@ -318,17 +314,20 @@
     "\"\"\")\n",
     "\n",
     "# Augment a prompt with collection search\n",
-    "def do_rag(query, limit=limit, model_embedding=model_embedding):\n",
+    "def do_rag(query, collection_name=None, limit=5, search_method=\"hybrid\", model_embedding=None):\n",
     "    # Search relevant chunks\n",
     "    se_client = SearchEngineClient()\n",
-    "    hits = se_client.search(collection_name, query, limit=limit, model_embedding=model_embedding)\n",
+    "    hits = se_client.search(collection_name, query, limit=limit, method=search_method, model_embedding=model_embedding)\n",
     "    # Render prompt\n",
     "    return rag_prompt.render(query=query, chunks=hits, limit=limit)\n",
     "\n",
     "# The LLM core generation\n",
-    "def generate_with_rag(model, prompt, system_prompt=system_prompt, with_rag=True, limit=limit, model_embedding=model_embedding):\n",
+    "def generate_with_rag(prompt, model=None, system_prompt=system_prompt, with_rag=True, sampling_params=None, **rag_params):\n",
+    "    if not sampling_params:\n",
+    "        sampling_params = {}\n",
+    "        \n",
     "    if with_rag:\n",
-    "        prompt = do_rag(prompt, limit=limit, model_embedding=model_embedding)\n",
+    "        prompt = do_rag(prompt, **rag_params)\n",
     "    \n",
     "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
     "    if system_prompt:\n",
@@ -343,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 49,
    "id": "31b924c1-0f80-4f89-a266-07bafe389364",
    "metadata": {},
    "outputs": [
@@ -384,32 +383,7 @@
     }
    ],
    "source": [
-    "print(do_rag(\"CNI\", limit=3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "4cde1a5a-3e03-40ae-a4c8-e58789b0fe78",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "query           Consider the Marketing Affiliate Agreement bet...\n",
-       "output_true     This agreement shall begin upon the date of it...\n",
-       "snippets        [{'file_path': 'cuad/CybergyHoldingsInc_201405...\n",
-       "dataset_name                                                 cuad\n",
-       "Name: 0, dtype: object"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dataset_df.iloc[0]"
+    "print(do_rag(\"CNI\", collection_name=\"legalbenchrag_v1\", model_embedding=\"BAAI/bge-m3\", limit=3))"
    ]
   },
   {
@@ -421,23 +395,129 @@
    "source": [
     "# Async computing -- RAG generation\n",
     "# --\n",
+    "from functools import partial\n",
     "\n",
     "# The models to runs\n",
-    "models = [\"mistralai/Mistral-Small-3.2-24B-Instruct-2506\"]\n",
+    "models = [\n",
+    "   {\n",
+    "     \"aliased_name\": \"model_hybrid_7_bgem3\",\n",
+    "     \"model\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
+    "     \"collection_name\": \"legalbenchrag_v1\",\n",
+    "     \"model_embedding\": \"BAAI/bge-m3\",\n",
+    "     \"search_method\": \"hybrid\",\n",
+    "     \"limit\": 7,\n",
+    "     \"system_prompt\": system_prompt,\n",
+    "     \"sampling_params\": sampling_params,\n",
+    "    },\n",
+    "    {\n",
+    "     \"aliased_name\": \"model_semantic_7_bgem3\",\n",
+    "     \"model\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
+    "     \"collection_name\": \"legalbenchrag_v1\",\n",
+    "     \"model_embedding\": \"BAAI/bge-m3\",\n",
+    "     \"search_method\": \"semantic\",\n",
+    "     \"limit\": 7,\n",
+    "     \"system_prompt\": system_prompt,\n",
+    "     \"sampling_params\": sampling_params,\n",
+    "    },\n",
+    "    {\n",
+    "     \"aliased_name\": \"model_lexical_7_bgem3\",\n",
+    "     \"model\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
+    "     \"collection_name\": \"legalbenchrag_v1\",\n",
+    "     \"model_embedding\": \"BAAI/bge-m3\",\n",
+    "     \"search_method\": \"lexical\",\n",
+    "     \"limit\": 7,\n",
+    "     \"system_prompt\": system_prompt,\n",
+    "     \"sampling_params\": sampling_params,\n",
+    "    },\n",
+    "]\n",
     "\n",
     "# Loop over the model to try\n",
-    "model_raws = []\n",
+    "model_answers = []\n",
     "for model in models:\n",
     "    # Create a list of model arguments (same model repeated for each prompt)\n",
     "    prompts = dataset_df.iloc[sample]['query'].tolist()\n",
-    "    model_args = [model] * len(prompts)\n",
+    "    params_to_partial = {\n",
+    "        k: model[k]\n",
+    "        for k in [\"model\", \"collection_name\", \"model_embedding\", \"search_method\", \"limit\", \"system_prompt\", \"sampling_params\"] \n",
+    "        if model.get(k)\n",
+    "    }\n",
+    "    generate_with_rag_partial = partial(generate_with_rag, **params_to_partial)\n",
     "\n",
     "    # Async over the prompts\n",
     "    with concurrent.futures.ThreadPoolExecutor(max_workers=8) as executor:\n",
     "        # Map generate over pairs of (model, prompt)\n",
-    "        results = list(executor.map(generate_with_rag, model_args, prompts))\n",
+    "        results = list(executor.map(generate_with_rag_partial, prompts))\n",
     "\n",
-    "    model_raws.append(results)"
+    "    model_answers.append(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "d3744c5f-cae7-427a-a765-a630e6b0f266",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "JSONDecodeError",
+     "evalue": "Expecting value: line 1 column 1 (char 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mJSONDecodeError\u001b[39m                           Traceback (most recent call last)",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/main/missions/venv/lib/python3.13/site-packages/requests/models.py:976\u001b[39m, in \u001b[36mResponse.json\u001b[39m\u001b[34m(self, **kwargs)\u001b[39m\n\u001b[32m    975\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m976\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mcomplexjson\u001b[49m\u001b[43m.\u001b[49m\u001b[43mloads\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mtext\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    977\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m JSONDecodeError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m    978\u001b[39m     \u001b[38;5;66;03m# Catch JSON-related errors and raise as requests.JSONDecodeError\u001b[39;00m\n\u001b[32m    979\u001b[39m     \u001b[38;5;66;03m# This aliases json.JSONDecodeError and simplejson.JSONDecodeError\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/lib/python3.13/json/__init__.py:346\u001b[39m, in \u001b[36mloads\u001b[39m\u001b[34m(s, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[39m\n\u001b[32m    343\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m (\u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[32m    344\u001b[39m         parse_int \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m parse_float \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[32m    345\u001b[39m         parse_constant \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_pairs_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m kw):\n\u001b[32m--> \u001b[39m\u001b[32m346\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_default_decoder\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdecode\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    347\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/lib/python3.13/json/decoder.py:345\u001b[39m, in \u001b[36mJSONDecoder.decode\u001b[39m\u001b[34m(self, s, _w)\u001b[39m\n\u001b[32m    341\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"Return the Python representation of ``s`` (a ``str`` instance\u001b[39;00m\n\u001b[32m    342\u001b[39m \u001b[33;03mcontaining a JSON document).\u001b[39;00m\n\u001b[32m    343\u001b[39m \n\u001b[32m    344\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m345\u001b[39m obj, end = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mraw_decode\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43midx\u001b[49m\u001b[43m=\u001b[49m\u001b[43m_w\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mend\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    346\u001b[39m end = _w(s, end).end()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/lib/python3.13/json/decoder.py:363\u001b[39m, in \u001b[36mJSONDecoder.raw_decode\u001b[39m\u001b[34m(self, s, idx)\u001b[39m\n\u001b[32m    362\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mStopIteration\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[32m--> \u001b[39m\u001b[32m363\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m JSONDecodeError(\u001b[33m\"\u001b[39m\u001b[33mExpecting value\u001b[39m\u001b[33m\"\u001b[39m, s, err.value) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m    364\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m obj, end\n",
+      "\u001b[31mJSONDecodeError\u001b[39m: Expecting value: line 1 column 1 (char 0)",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[31mJSONDecodeError\u001b[39m                           Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[70]\u001b[39m\u001b[32m, line 35\u001b[39m\n\u001b[32m     26\u001b[39m expset = {\n\u001b[32m     27\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mcv\u001b[39m\u001b[33m\"\u001b[39m: {\u001b[33m\"\u001b[39m\u001b[33mcommon_params\u001b[39m\u001b[33m\"\u001b[39m: common_params, \u001b[33m\"\u001b[39m\u001b[33mgrid_params\u001b[39m\u001b[33m\"\u001b[39m: grid_params, \u001b[33m\"\u001b[39m\u001b[33mrepeat\u001b[39m\u001b[33m\"\u001b[39m: \u001b[32m2\u001b[39m},\n\u001b[32m     28\u001b[39m }\n\u001b[32m     30\u001b[39m response = requests.patch(\n\u001b[32m     31\u001b[39m     \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mEVALAP_API_URL\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m/experiment_set/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mexpset_id\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m,\n\u001b[32m     32\u001b[39m     headers={\u001b[33m\"\u001b[39m\u001b[33mAuthorization\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mBearer \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mEVALAP_API_KEY\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mContent-Encoding\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33mgzip\u001b[39m\u001b[33m\"\u001b[39m},\n\u001b[32m     33\u001b[39m     json=expset,\n\u001b[32m     34\u001b[39m )\n\u001b[32m---> \u001b[39m\u001b[32m35\u001b[39m resp = \u001b[43mresponse\u001b[49m\u001b[43m.\u001b[49m\u001b[43mjson\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     36\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33mid\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m resp:\n\u001b[32m     37\u001b[39m     expset_id = resp[\u001b[33m\"\u001b[39m\u001b[33mid\u001b[39m\u001b[33m\"\u001b[39m]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/main/missions/venv/lib/python3.13/site-packages/requests/models.py:980\u001b[39m, in \u001b[36mResponse.json\u001b[39m\u001b[34m(self, **kwargs)\u001b[39m\n\u001b[32m    976\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m complexjson.loads(\u001b[38;5;28mself\u001b[39m.text, **kwargs)\n\u001b[32m    977\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m JSONDecodeError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m    978\u001b[39m     \u001b[38;5;66;03m# Catch JSON-related errors and raise as requests.JSONDecodeError\u001b[39;00m\n\u001b[32m    979\u001b[39m     \u001b[38;5;66;03m# This aliases json.JSONDecodeError and simplejson.JSONDecodeError\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m980\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m RequestsJSONDecodeError(e.msg, e.doc, e.pos)\n",
+      "\u001b[31mJSONDecodeError\u001b[39m: Expecting value: line 1 column 1 (char 0)"
+     ]
+    }
+   ],
+   "source": [
+    "# Adding RAG model to the experiment set\n",
+    "# --\n",
+    "common_params = {\n",
+    "    \"dataset\": dataset[\"name\"],\n",
+    "    \"metrics\": [\"judge_precision\", \"output_length\"],\n",
+    "    \"model\": {\"sampling_params\" : sampling_params, \"system_prompt\": system_prompt},\n",
+    "    \"judge_model\": {\n",
+    "        \"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY\n",
+    "    },\n",
+    "    \"sample\": sample,\n",
+    "}\n",
+    "\n",
+    "grid_params = {\n",
+    "    \"model\": [\n",
+    "        {\n",
+    "            \"aliased_name\": model[\"aliased_name\"],\n",
+    "            \"name\": model[\"model\"],\n",
+    "            \"system_prompt\": system_prompt,\n",
+    "            \"sampling_params\": sampling_params,\n",
+    "            \"output\": model_answers[i],\n",
+    "        }\n",
+    "        for i, model in enumerate(models)    \n",
+    "    ],\n",
+    "}\n",
+    "\n",
+    "expset = {\n",
+    "    \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\": 2},\n",
+    "}\n",
+    "\n",
+    "response = requests.patch(\n",
+    "    f\"{EVALAP_API_URL}/experiment_set/{expset_id}\",\n",
+    "    headers={\"Authorization\": f\"Bearer {EVALAP_API_KEY}\", \"Content-Encoding\": \"gzip\"},\n",
+    "    json=expset,\n",
+    ")\n",
+    "resp = response.json()\n",
+    "if \"id\" in resp:\n",
+    "    expset_id = resp[\"id\"]\n",
+    "    print(f'Created expset: {resp[\"name\"]} ({resp[\"id\"]})')\n",
+    "else:\n",
+    "    print(resp)"
    ]
   }
  ],
