--- a/notebooks/r&d_change_rag_prompt.ipynb
+++ b/notebooks/r&d_change_rag_prompt.ipynb
@@ -234,11 +234,15 @@
    "id": "6379a9f9-ab86-40d3-8042-59f3a7f1a5c4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "judge_name = \"gpt-4.1\"\n",
+    "judge_api_url = \"https://api.openai.com/v1\",\n",
+    "judge_api_key = os.getenv(\"OPENAI_API_KEY\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "6acdfa88-95ef-4adb-ad96-775628a42ccf",
    "metadata": {},
    "outputs": [
@@ -258,7 +262,11 @@
     "common_params = {\n",
     "    \"dataset\": dataset[\"name\"],\n",
     "    \"metrics\": [\"judge_precision\", \"output_length\"],\n",
-    "    \"judge_model\": \"gpt-4o\",\n",
+    "    \"judge_model\": {\n",
+    "        \"name\": judge_name,\n",
+    "        \"base_url\": judge_api_url,\n",
+    "        \"api_key\": judge_api_key,\n",
+    "},\n",
     "}\n",
     "\n",
     "grid_params = {\n",
