--- a/notebooks/run_an_example_of_toolings_usage.ipynb
+++ b/notebooks/run_an_example_of_toolings_usage.ipynb
@@ -40,7 +40,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "id": "ad462cdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "judge_name = \"gpt-4.1\"\n",
+    "judge_api_url = \"https://api.openai.com/v1\",\n",
+    "judge_api_key = os.getenv(\"OPENAI_API_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1b60dd8b-e7b5-4a08-86c7-1025c5b80f18",
    "metadata": {},
    "outputs": [
@@ -63,7 +75,11 @@
     "    \"dataset\" : \"MFS_questions_v01\",\n",
     "    \"model\": {\"sampling_params\" : {\"temperature\": 0.2}, \"system_prompt\": system_prompt},\n",
     "    \"metrics\" : metrics,\n",
-    "    \"judge_model\": \"gpt-4o\",\n",
+    "    \"judge_model\": {\n",
+    "        \"name\": judge_name,\n",
+    "        \"base_url\": judge_api_url,\n",
+    "        \"api_key\": judge_api_key,\n",
+    "},\n",
     "}\n",
     "grid_params = {\n",
     "    \"model\": [\n",
