--- a/notebooks/run_evals_models_with_rag.ipynb
+++ b/notebooks/run_evals_models_with_rag.ipynb
@@ -46,7 +46,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "id": "31b8c825",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "judge_name = \"gpt-4.1\"\n",
+    "judge_api_url = \"https://api.openai.com/v1\",\n",
+    "judge_api_key = os.getenv(\"OPENAI_API_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ecb4a91a-09aa-49dc-8d1c-682ca14b111f",
    "metadata": {},
    "outputs": [
@@ -67,7 +79,11 @@
     "common_params = {\n",
     "    \"model\": {\"sampling_params\" : {\"temperature\": 0.2}},\n",
     "    \"metrics\" : metrics,\n",
-    "    \"judge_model\": \"gpt-4.1\",\n",
+    "    \"judge_model\": {\n",
+    "        \"name\": judge_name,\n",
+    "        \"base_url\": judge_api_url,\n",
+    "        \"api_key\": judge_api_key,\n",
+    "    },\n",
     "}\n",
     "grid_params = {\n",
     "    \"dataset\": [\"MFS_questions_v01\",  \"Assistant IA - QA\"],\n",
