--- a/notebooks/run_evals_models_raw.ipynb
+++ b/notebooks/run_evals_models_raw.ipynb
@@ -42,7 +42,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "id": "3ee953b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "judge_name = \"gpt-4.1\"\n",
+    "judge_api_url = \"https://api.openai.com/v1\",\n",
+    "judge_api_key = os.getenv(\"OPENAI_API_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1b60dd8b-e7b5-4a08-86c7-1025c5b80f18",
    "metadata": {},
    "outputs": [
@@ -66,7 +78,11 @@
     "        \"dataset\" : dataset,\n",
     "        \"model\": {\"sampling_params\" : {\"temperature\": 0.2}},\n",
     "        \"metrics\" : metrics,\n",
-    "        \"judge_model\": \"gpt-4.1\",\n",
+    "        \"judge_model\": {\n",
+    "            \"name\": judge_name,\n",
+    "            \"base_url\": judge_api_url,\n",
+    "            \"api_key\": judge_api_key,\n",
+    "    },\n",
     "    }\n",
     "    grid_params = {\n",
     "        \"model\": [\n",
