--- a/notebooks/run_your_own_llm_as_a_judge_metric.ipynb
+++ b/notebooks/run_your_own_llm_as_a_judge_metric.ipynb
@@ -207,7 +207,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
+   "id": "eac5ebc7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "judge_name = \"gpt-4.1\"\n",
+    "judge_api_url = \"https://api.openai.com/v1\",\n",
+    "judge_api_key = os.getenv(\"OPENAI_API_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "118fa91e-3e9f-4ee4-8272-2041238fcd22",
    "metadata": {},
    "outputs": [
@@ -258,7 +270,11 @@
     "    \"dataset\" : \"DECCP\",\n",
     "    \"model\": {\"sampling_params\" : {\"temperature\": 0.2}},\n",
     "    \"metrics\" : metrics,\n",
-    "    \"judge_model\": \"gpt-4.1\",\n",
+    "    \"judge_model\": {\n",
+    "        \"name\": judge_name,\n",
+    "        \"base_url\": judge_api_url,\n",
+    "        \"api_key\": judge_api_key,\n",
+    "    },\n",
     "}\n",
     "grid_params = {\n",
     "    \"model\": [\n",
